# bilitool

./: .gitignore  LICENSE  README-en.md  README.md  cli.py  login.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sha256sum.sh
.github/ISSUE_TEMPLATE/: bug_report.md  docs-feedback.md  feature_request.md  help-wanted.md
.github/workflows/: build.yml
bilitool/: __init__.py  cli.py
bilitool/authenticate/: config.json  ioer.py  wbi_sign.py
bilitool/controller/: download_controller.py  feed_controller.py  login_controller.py  upload_controller.py
bilitool/download/: bili_download.py
bilitool/feed/: __init__.py  bili_live_list.py  bili_video_list.py
bilitool/login/: check_bili_login.py  check_login.py  login_bili.py  logout_bili.py
bilitool/model/: config.json  model.py
bilitool/upload/: bili_upload.py
bilitool/utils/: check_format.py  get_ip_info.py  parse_cookies.py  parse_yaml.py
biliupload/: cli.py  config.json  ioer.py
biliupload/authenticate/: wbi_sign.py
biliupload/controller/: download_controller.py  upload_controller.py
biliupload/download/: bili_download.py
biliupload/feed/: __init__.py  bili_video_list.py
biliupload/login/: check_login.py  login_bili.py  logout_bili.py
biliupload/upload/: bili_upload.py
biliupload/utils/: get_ip_info.py  parse_cookies.py  parse_yaml.py
docs/: CNAME  check.md  convert.md  download.md  getting-start.md  index.md  installation.md  ip.md  list.md  login.md  logout.md  show.md  tid.md  upload.md
docs/.vitepress/: config.mts
template/: example-config.yaml
tests/: test_feed.py  test_get_ip_info.py  test_upload.py  test_utils.py
upload/: bili_upload.py
utils/: parse_cookies.py  parse_yaml.py
